Changed the Base64 class used